[tool.poetry]
name = "disnake-ext-formatter"
version = "0.1.0a1"
description = "A simple string.Formatter for disnake types"
authors = ["onerandomusername <genericusername414@gmail.com>"]
license = "MIT"
packages = [
    { include = "disnake/ext/formatter/**/*.py" },
]
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.8"
disnake = "^2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
taskipy = "^1.10.1"
flake8 = "~=4.0.1"
flake8-bandit= "~=3.0.0"
flake8-bugbear = "22.7.1"
flake8-comprehensions = "~=3.10.0"
flake8-noqa = "~=1.2.5"
flake8-pytest-style = "~=1.6.0"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.taskipy.tasks]
black = { cmd = "task lint black", help = "Run black" }
isort = { cmd = "task lint isort", help = "Run isort" }
lint = { cmd = "pre-commit run --all-files", help = "Check all files for linting errors" }
precommit = { cmd = "pre-commit install --install-hooks", help = "Install the precommit hook" }
pyright = { cmd = "dotenv -f task.env run -- pyright", help = "Run pyright" }
